# RNFabricProject

./: .eslintrc.js  .prettierrc.js  App.tsx  jest.config.js  metro.config.js  package.json  readme.md
fabric-component-sample-package/: package.json
fabric-component-sample-package/src/specs/v1/: SelectBox.ts
fabric-component-sample-package/src/specs/v2/: QDGestureFloatNativeComponent.ts
harmony/: .gitignore  build-profile.json5  hvigorfile.ts  log.txt  oh-package.json5  readme.md
harmony/AppScope/: app.json5
harmony/entry/: build-profile.json5  hvigorfile.ts  oh-package.json5
harmony/entry/src/main/: module.json5
harmony/entry/src/main/cpp/: CMakeLists.txt  PackageProvider.cpp
harmony/entry/src/main/cpp/rnc/: CMakeLists.txt  FabricComponentSamplePackagePackage.cpp  FabricComponentSamplePackagePackage.h  QDGestureFloatComponentInstance.cpp  QDGestureFloatComponentInstance.h
harmony/entry/src/main/ets/: GeneratedPackage.ts  RNPackagesFactory.ts
harmony/entry/src/main/ets/RNComponent/: SelectBox.ets
harmony/entry/src/main/ets/entryability/: EntryAbility.ets
harmony/entry/src/main/ets/pages/: Index.ets
harmony/entry/src/main/resources/en_US/element/: string.json
harmony/entry/src/main/resources/zh_CN/element/: string.json
harmony/entry/src/ohosTest/ets/test/: Ability.test.ets  List.test.ets
harmony/entry/src/ohosTest/ets/testability/: TestAbility.ets
harmony/entry/src/ohosTest/ets/testrunner/: OpenHarmonyTestRunner.ets
harmony/entry/src/test/: List.test.ets  LocalUnit.test.ets
src/: SelectBoxApp.tsx
(+1 files in other folders)
